base/minecraft/minecraft-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server
  namespace: minecraft-dev
spec:
  type: NodePort
  ports:
    - port: 25565
      targetPort: 25565
      nodePort: 30000
      protocol: TCP
  selector:
    app: minecraft-server
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-rcon
  namespace: minecraft-dev
spec:
  type: ClusterIP
  ports:
    - port: 25575
      targetPort: 25575
      protocol: TCP
  selector:
    app: minecraft-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft-dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
        - name: minecraft-server
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
              protocol: TCP
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "8Gi"
              cpu: "4"
          tty: true
          stdin: true
          volumeMounts:
            - name: minecraft-data
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: minecraft-nfs-pvc
---
