base/minecraft/minecraft-rcon-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rcon-web-admin
  namespace: minecraft-dev
spec:
  selector:
    app: rcon-web-admin
  ports:
    - port: 4326
      targetPort: 4326
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rcon-web-admin
  namespace: minecraft-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcon-web-admin
  template:
    metadata:
      labels:
        app: rcon-web-admin
    spec:
      containers:
        - name: rcon-web-admin
          image: itzg/rcon
          ports:
            - containerPort: 4326
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
